crates/toml_edit/fixtures/invalid/table/quoted-no-close.stderr
TOML parse error at line 1, column 21
  |
1 | ["where will it end]
  |                     ^
Invalid basic string
